BT-2 | On click hide toast notification, color visibility issue fixed

--- a/butterToast.css
+++ b/butterToast.css
@@ -1,16 +1,18 @@
 .toast-container{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 14px;
-    width: 240px;
-    height: 100%;
+    width: 340px;
+    /* height: 100%; */
     position: absolute;
     top: 0;
     right: 0;
     overflow: hidden;
     padding-right: 45px;
-}
-.toast-container .toast{
-    width: 100%;
+  }
+  .toast-container .toast{
+    z-index: 99;
+    font-size: 12px;
+    width: 300px;
     min-height: 50px;
     margin: 10px 0 0 10px;
     padding: 0 10px;
@@ -18,42 +20,40 @@
     border: 2px groove;
     border-radius: 10px;
     border-left-width: 10px;
-    /* border-top-left-radius: 0%;
-    border-bottom-left-radius: 0%; */
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
     animation-duration:  .3s;
     animation-name: toastEntry;
     animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
     background: #dad3002e;
-}
-.toast-success{
+  }
+  .toast-success{
     border-color:  green !important;
-    background: #74ff3a78 !important
-}
-.toast-warning{
+    background: #3aff7ff0 !important;
+  }
+  .toast-warning{
     border-color:  rgb(255, 136, 0) !important;
-    background: #ffa500ad !important;
-}
-.toast-danger{
+    background: #ffb717f2 !important;
+  }
+  .toast-danger{
     border-color:  red !important;
-    background: #ff00006b !important;
-}
-.toast-info{
+    background: #ff021ae6 !important
+  }
+  .toast-info{
     border-color:  rgb(83, 83, 255) !important;
-    background: #0000ff38 !important;
-}
-.toast-title{
+    background: #7e7eff !important;
+  }
+  .toast-title{
     padding: 10px 0;
-}
-.toast-message{
-    margin: 10px 0;
-}
-.toast-hide{
+  }
+  .toast-message{
+    margin: 0 0 10px 0;
+  }
+  .toast-hide{
     animation-duration:  .3s;
     animation-name: toastExit;
     animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
-}
-@keyframes toastEntry {
+  }
+  @keyframes toastEntry {
     from {
       transform: translate3d(400px, 0, 0);
       opacity: 0;
